--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon ./src/Server/app.ts",
     "dev": "nodemon ./src/Server/app.ts",
     "build": "tsc --project tsconfig.json"
@@ -22,10 +22,23 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.11",
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.5.4",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
+    "axios": "^1.5.0",
+    "jest": "^29.6.4",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "identity-obj-proxy"
+    }
   }
 }
